PYIC-3504: fixed a code smell